// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegate Listing, open filter render list and open filter 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegates.newDelegate
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            disabled=""
            id="ngfilterbtn"
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main listBody"
    >
      <div
        class="StyledProps--font StyledProps--main delegateListContainer"
        style=""
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main delegateListHeader"
          >
            <div
              style="width: 38px;"
            />
            <div
              style="width: 30%;"
            >
              delegate.DelegateName
            </div>
            <div
              style="width: 25%;"
            >
              tagsLabel
            </div>
            <div
              style="width: calc(20% - 18px);"
            >
              delegate.LastHeartBeat
            </div>
            <div
              style="width: calc(20% - 20px);"
            >
              connectivityStatus
            </div>
            <div
              style="width: 5%;"
            />
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateItemContainer Card--interactive"
            tabindex="0"
          >
            <div
              class="Layout--horizontal StyledProps--main delegateItemSubcontainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center; width: 38px;"
              >
                <span
                  class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  data-icon="app-kubernetes"
                >
                  <svg
                    height="24"
                    viewBox="0 0 32 30"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                        fill="#326CE5"
                      />
                      <path
                        d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                        fill="#FFF"
                        stroke="#FFF"
                        stroke-width="0.25"
                      />
                    </g>
                  </svg>
                </span>
              </p>
              <div
                class="Layout--horizontal StyledProps--main"
                data-testid="groupHostName1"
                style="width: 30%;"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                    </p>
                  </div>
                  <div
                    class="groupHostName"
                  >
                    groupHostName1
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main connectivity"
                style="width: 25%;"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
                <span />
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="width: calc(20% - 18px);"
              >
                dummy date
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: calc(20% - 20px);"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main Text--icon StyledProps--padding-small StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 5%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main itemActionContainer"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing With Groups render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.DelegateName
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              dummy date
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing test actions render data and click delete 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        disabled=""
        id="newDelegateBtn"
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.DelegateName
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              dummy date
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing without tags render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.DelegateName
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              dummy date
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feature flag enabled render delegates list and check for activity column 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.DelegateName
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              dummy date
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  connected
                </p>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
